header alignment fixed

--- a/evil-amazon-client/src/components/header/Header.css
+++ b/evil-amazon-client/src/components/header/Header.css
@@ -18,7 +18,7 @@
 
 .header__search {
   display: flex;
-  flex: 1 3;
+  flex: 0.65;
   align-items: center;
   background-color: var(--amazon-yellow);
 }
@@ -33,10 +33,10 @@
   color: var(--amazon-black);
   padding: 5px;
   height: 100% !important;
+  cursor: pointer;
 }
 
 .header__nav {
-  flex: 1 2;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
